missionTimer runs correctly with all elements "display"-settings correct, this hook is finished. - Save progress to db needs to be added

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="MapQuest - Be active, do the missions & win the game!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>MapQuest 0.0.4.1</title>
+    <title>MapQuest 0.0.4.2</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript, geo location and cookies to be able to run this application.</noscript>
     <div id="root"></div>
 
   </body>
